log
Wed, Apr 16, 2025  8:43:27 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025  8:44:00 AM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (void**)calloc(capacity,sizeof(void*));
                  ^
cc1.exe: all warnings being treated as errors
9d7dd2d
Wed, Apr 16, 2025  8:46:47 AM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:62:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (void**)calloc(capacity,sizeof(void*));
                  ^
cc1.exe: all warnings being treated as errors
cf29c30
Wed, Apr 16, 2025  8:52:35 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0a2a890
Wed, Apr 16, 2025  8:55:03 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
91942dd
Wed, Apr 16, 2025  9:00:08 AM: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:63:5: error: expected ';' before 'map'
     map->capacity = capacity;
     ^~~
ac0af76
Wed, Apr 16, 2025  9:00:28 AM: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
717edf9
Wed, Apr 16, 2025  9:13:05 AM: 
 hashmap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:47:22: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
         Pair *pair = map ->buckets;
                      ^~~
cc1.exe: all warnings being treated as errors
65f03b8
Wed, Apr 16, 2025  9:32:17 AM: 
 hashmap.c | 28 +++++++++++-----------------
 1 file changed, 11 insertions(+), 17 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:10: error: unused variable 'orgIndex' [-Werror=unused-variable]
     long orgIndex = index;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
8af9fe0
Wed, Apr 16, 2025  9:32:45 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
445a371
Wed, Apr 16, 2025  9:39:31 AM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
 tests:  2|0
7d4c026
Wed, Apr 16, 2025  9:39:48 AM: 
 tests:  5|4
total_score: 30/70
d28fb2e
Wed, Apr 16, 2025  9:49:01 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
d730ee2
Wed, Apr 16, 2025  9:50:24 AM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:90:10: error: unused variable 'orgIndex' [-Werror=unused-variable]
     long orgIndex = index;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
dfdd534
Wed, Apr 16, 2025  9:50:47 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:90:10: error: unused variable 'orgIndex' [-Werror=unused-variable]
     long orgIndex = index;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
5a99938
Wed, Apr 16, 2025  9:51:01 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
8074650
Wed, Apr 16, 2025  9:51:41 AM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
fd08998
Wed, Apr 16, 2025  9:56:38 AM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:85:18: error: implicit declaration of function 'has' [-Werror=implicit-function-declaration]
     long index = has(key, map-> capacity);
                  ^~~
cc1.exe: all warnings being treated as errors
dbdbfea
Wed, Apr 16, 2025  9:56:51 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
1f9926e
Wed, Apr 16, 2025  9:59:21 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
d4f9ec7
Wed, Apr 16, 2025 10:03:00 AM: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
80941a9
Wed, Apr 16, 2025 10:05:57 AM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
2b86618
Wed, Apr 16, 2025 10:08:40 AM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
94db1b8
Wed, Apr 16, 2025 10:25:28 AM: 
 hashmap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:66:24: error: invalid initializer
     Pair old_buckets = map ->buckets;
                        ^~~
hashmap.c:73:5: error: conversion to non-scalar type requested
     map->buckets = (Pair)calloc(map->capacity, sizeof(Pair*));
     ^~~
hashmap.c:75:22: error: incompatible types when assigning to type 'Pair ** {aka struct Pair **}' from type 'Pair {aka struct Pair}'
         map->buckets = old_buckets;
                      ^
hashmap.c:86:33: error: subscripted value is neither array nor pointer nor vector
         Pair *pair = old_buckets[index];
                                 ^
1c207db
